@@ -1,3 +1,12 @@
+2007-09-05  Akira TAGOH  <tagoh@redhat.com>
+
+	* src/im-chooser-simple.c (im_chooser_simple_class_init): create
+	a notify_n_im signal.
+	(_im_chooser_simple_update_im_list): emit a notify_n_im signal here.
+
+	* src/main.c (_im_notify_n_im_cb): new function to deal with the case
+	of no IM.
+
 2007-09-04  Akira TAGOH  <tagoh@redhat.com>
 
 	* data/xinput.sh.in.in: Do not run even $AUXILIARY_PROGRAM when
